# b2sum

./: .gitignore  LICENSE  README.md  b2sum.py  setup.cfg  setup.py
Notes/: Notes.dev.txt
src/b2sum/: __init__.py  __main__.py  b2sum.py
