
[metadata]
name = b2sum-pkg-krink
version = 0.0.0
author = Karl Rink
author_email = karl@rink.us
description = b2sum blake2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karlrink/b2sum
project_urls =
    Bug Tracker = https://github.com/krink/b2sum/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src


